--- a/apply.html
+++ b/apply.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
@@ -9,36 +10,54 @@
     <title>Whalin Wood-works</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">Home</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="apply.html">Plan your trip<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="top.html">Top Picks</a>
-      </li>
-      
-     
-    </ul>
-   
+<div class="nav-right visible-xs">
+  <div class="button" id="btn">
+    <div class="bar top"></div>
+    <div class="bar middle"></div>
+    <div class="bar bottom"></div>
   </div>
-</nav>
-
+</div>
+<!-- nav-right -->
+<main>
 
 <div class='parallax'>
+<br>
+
+		
+
+</div>
+<br>
+  <nav>
+    <div class="nav-right hidden-xs">
+      <div class="button" id="btn">
+        <div class="bar top"></div>
+        <div class="bar middle"></div>
+        <div class="bar bottom"></div>
+      </div>
+    </div>
+    <!-- nav-right -->
+  </nav>
+
+ 
+
+
+
+	
+
+</div>
+
+
+<div class='applyBorder'>
 
 <br>
 
-		<div class="jumbotron jumbotron-fluid" id="transpHeader">
+		<div class="jumbotron jumbotron-fluid">
 			<div class="container">
 				 <h1 class="display-4" id="applyNow">apply now</h1>
 					 <p class="lead">The vacation of your dreams is at your fingertips.</p>
@@ -492,17 +511,25 @@
   
 
 </div>
-			</div>
-		</div>
+			
 
 
+</main>
+
+<div class="sidebar">
+  <ul class="sidebar-list">
+    <li class="sidebar-item"><a href="apply.html" class="sidebar-anchor">Apply Now</a></li>
+    <li class="sidebar-item"><a href="top.html" class="sidebar-anchor">Top results</a></li>
+    <li class="sidebar-item"><a href="result.html" class="sidebar-anchor">Your results</a></li>
+    <li class="sidebar-item"><a href="#" class="sidebar-anchor">Item 4</a></li>
+  </ul>
+</div>
 
 </div>
 <script src="jquery-3.3.1.min.js"></script>
 <script> src"https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/core.js"> </script>
 <script>
 $.widget("ui.autocomplete", $.ui.autocomplete, {
-
   _renderMenu: function(ul, items) {
     var that = this;
     ul.attr("class", "nav nav-pills nav-stacked  bs-autocomplete-menu");
@@ -510,7 +537,6 @@ $.widget("ui.autocomplete", $.ui.autocomplete, {
       that._renderItemData(ul, item);
     });
   },
-
   _resizeMenu: function() {
     var ul = this.menu.element;
     ul.outerWidth(Math.min(
@@ -520,9 +546,7 @@ $.widget("ui.autocomplete", $.ui.autocomplete, {
       this.element.outerWidth()
     ));
   }
-
 });
-
 (function() {
   "use strict";
   var cities = [{
@@ -781,22 +805,17 @@ $.widget("ui.autocomplete", $.ui.autocomplete, {
     "id": 85,
     "cityName": "Zagreb"
   }];
-
   $('.bs-autocomplete').each(function() {
     var _this = $(this),
       _data = _this.data(),
       _hidden_field = $('#' + _data.hidden_field_id);
-
     _this.after('<div class="bs-autocomplete-feedback form-control-feedback"><div class="loader">Loading...</div></div>')
       .parent('.form-group').addClass('has-feedback');
-
     var feedback_icon = _this.next('.bs-autocomplete-feedback');
     feedback_icon.hide();
-
     _this.autocomplete({
         minLength: 2,
         autoFocus: true,
-
         source: function(request, response) {
           var _regexp = new RegExp(request.term, 'i');
           var data = cities.filter(function(item) {
@@ -804,21 +823,17 @@ $.widget("ui.autocomplete", $.ui.autocomplete, {
           });
           response(data);
         },
-
         search: function() {
           feedback_icon.show();
           _hidden_field.val('');
         },
-
         response: function() {
           feedback_icon.hide();
         },
-
         focus: function(event, ui) {
           _this.val(ui.item[_data.item_label]);
           event.preventDefault();
         },
-
         select: function(event, ui) {
           _this.val(ui.item[_data.item_label]);
           _hidden_field.val(ui.item[_data.item_id]);
@@ -834,7 +849,26 @@ $.widget("ui.autocomplete", $.ui.autocomplete, {
     // end autocomplete
   });
 })();
+<script>
+$(document).ready(function() {
 
+  function toggleSidebar() {
+    $(".button").toggleClass("active");
+    $("main").toggleClass("move-to-left");
+    $(".sidebar-item").toggleClass("active");
+  }
+
+  $(".button").on("click tap", function() {
+    toggleSidebar();
+  });
+
+  $(document).keyup(function(e) {
+    if (e.keyCode === 27) {
+      toggleSidebar();
+    }
+  });
+
+});
 </script>
 
 </body>
