--- a/top.html
+++ b/top.html
@@ -1,3 +1,5 @@
+
+    
 <!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
@@ -28,6 +30,9 @@
       <li class="nav-item">
         <a class="nav-link" href="top.html">Top Picks</a>
       </li>
+	  <li class="nav-item">
+								 <a class="nav-link" href="results.html">Results</a>
+							 </li>
        </ul>
     
   </div>
@@ -43,7 +48,7 @@
 				 <h1 class="display-4"> Sleeping</h1>
 					 <p class="lead">FInd your bed....</p>
 						<p class="lead">
-							 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+							 <a class="btn btn-primary btn-lg" href="results.html" role="button">Learn more</a>
 								</p>
 
 			</div>
@@ -55,7 +60,7 @@
 				 <h1 class="display-4"> Top things to see</h1>
 					 <p class="lead">Where will you go....</p>
 						<p class="lead">
-							 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+							 <a class="btn btn-primary btn-lg" href="results.html" role="button">Learn more</a>
 								</p>
 
 			</div>
@@ -66,7 +71,7 @@
 				 <h1 class="display-4"> Where to eat</h1>
 					 <p class="lead">What's for breakfast....</p>
 						<p class="lead">
-							 <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+							 <a class="btn btn-primary btn-lg" href="results.html" role="button">Learn more</a>
 								</p>
 
 			</div>
